fix destination mobile view

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -18,7 +18,7 @@ $clr-white: hsla(0deg, 0%, 100%, 1);
     --fs-800: 3.5rem;
     --fs-700: 1.5rem;
     --fs-600: 1rem;
-    --fs-500: 1.75rem;
+    --fs-500: 1rem;
     --fs-400: 0.9375rem;
     --fs-300: 1rem;
     --fs-200: 0.875rem;
@@ -34,6 +34,7 @@ $clr-white: hsla(0deg, 0%, 100%, 1);
         --fs-800: 5rem;
         --fs-700: 2.5rem;
         --fs-600: 1.5rem;
+        --fs-500: 1.25rem;
         --fs-400: 1rem;
     }
 }
@@ -44,6 +45,7 @@ $clr-white: hsla(0deg, 0%, 100%, 1);
         --fs-800: 6.25rem;
         --fs-700: 3.5rem;
         --fs-600: 2rem;
+        --fs-500: 1.75rem;
         --fs-400: 1.125rem;
     }
 }
@@ -159,38 +161,6 @@ select {
     padding-inline: 2em;
     margin-inline: auto;
     max-width: 80rem;
-}
-
-.grid-container {
-    text-align: center;
-    display: grid;
-    place-items: center;
-    padding-inline: 1rem;
-}
-
-.grid-container * {
-    max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-    .grid-container {
-        text-align: left;
-        column-gap: var(--container-gap, 2rem);
-        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
-    }
-
-    .grid-container>*:first-child {
-        grid-column: 2;
-    }
-
-    .grid-container>*:last-child {
-        grid-column: 3;
-    }
-
-    .grid-container--home {
-        padding-bottom: 6rem;
-        place-content: center;
-    }
 }
 
 .sr-only {
@@ -591,25 +561,16 @@ select {
 
 /* Destinations */
 
-.destinations dt {
-
-}
-
-.destinations dd {
-    font-size: var(--fs-700);
-    font-family: var(--ff-serif);
-    margin-inline-start: 0;
-}
-
-.destinations .grid-container {
-    justify-items: start;
-}
-
 .destination-tab-pane dl {
     justify-content: center;
     grid-auto-flow: row;
     padding-top: 1rem;
-    border-top: 1px solid var(--clr-white);
+    border-top: 1px solid adjust-color($clr-white, $alpha: -0.75);
+}
+
+
+.destination-tab-pane dd {
+    margin-inline-start: 0;
 }
 
 .tabcontent {
@@ -623,4 +584,67 @@ select {
 .fade-out {
     opacity: 0;
     transition: 0.25s opacity ease-in;
+}
+
+/* ----------- */
+/* Layout      */
+/* ----------- */
+
+.grid-container {
+    text-align: center;
+    display: grid;
+    place-items: center;
+    padding-inline: 1rem;
+}
+
+.grid-container * {
+    max-width: 50ch;
+}
+
+/* destination layout */
+
+.grid-container--destinations {
+    grid-template-areas: 
+        "title"
+        "image"
+        "tabs"
+        "content";
+}
+
+.numbered-title {
+    grid-area: title;
+}
+
+.grid-container--destinations > img {
+    grid-area: image;
+    max-width: 60%;
+}
+
+.grid-container--destinations > .tab-list {
+    grid-area: tabs;
+}
+
+.grid-container--destinations > .destination-tab-pane {
+    grid-area: content;
+}
+
+@media (min-width: 45em) {
+    .grid-container {
+        text-align: left;
+        column-gap: var(--container-gap, 2rem);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
+    }
+
+    .grid-container>*:first-child {
+        grid-column: 2;
+    }
+
+    .grid-container>*:last-child {
+        grid-column: 3;
+    }
+
+    .grid-container--home {
+        padding-bottom: 6rem;
+        place-content: center;
+    }
 }
